Made file accessible again

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGODB_URL = 'mongodb+srv://sp7763360:Suryasingh%40678@cluster0.4cefa.mongodb.net/FileUploadWebsite?retryWrites=true&w=majority&appName=Cluster0'
+BACKEND_URL = 'http://localhost:3000'
